fixing search not showing up on mobile when flag is presently hidding

--- a/assets/scss/components/stencil/navUser/_navUser.scss
+++ b/assets/scss/components/stencil/navUser/_navUser.scss
@@ -148,7 +148,8 @@
         display: block;
     }
 
-    &:first-child {
+    &:first-child,
+    #igFlag + .navUser-item {
         display: block;
         position: absolute;
         left: 60px;
